Added workflow name to execution list api
